--- a/survey/survey.html
+++ b/survey/survey.html
@@ -64,7 +64,7 @@
                 <textarea name="message" id="" cols="30" rows="10" placeholder="please explain"></textarea>
                 </div>
             </div>
-            <a href="#"> <button> SUBMIT</button></a>
+            <a href="survey.html"> <button> SUBMIT</button></a>
     </div>
 
     <footer>Written by I. Igbinosa</footer>
